--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "stock-code": "cd ./src/spider && node stock-code.js",
+    "plate": "cd ./src/spider && node stock-plate.js",
+    "export": "cd ./src/spider && node stock-export.js",
+    "tabel": "cd ./src/spider && node tabelexport.js",
     "stock-data": "cd ./src/spider && node stock-data.js",
     "get-data": "cd ./src/spider && node stock-code.js && node stock-data.js",
     "analyze": "cd ./src && node analyze.js"
@@ -26,11 +29,16 @@
   "dependencies": {
     "async": "^2.5.0",
     "cheerio": "^1.0.0-rc.2",
+    "electron": "^2.0.8",
     "iconv-lite": "^0.4.19",
-    "moment": "^2.19.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.27.0",
     "mongoose": "^4.12.2",
+    "nightmare": "^3.0.2",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "xlsx-style": "^0.8.13",
+    "zlib": "^1.0.5"
   }
 }
